--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
       container.appendChild(frame);
     }
   </script>
+<footer style="margin-top:20px; font-size:14px; color:#666;">
+  <p>
+    made by o ig, visit main: 
+    <a href="https://bothwellstuff.github.io/bothwlllll/" target="_blank">CLICK ME</a>
+  </p>
+</footer>
 </body>
 </html>
