--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>owens prox v2</title>
+  <title>owe proxy</title>
   <style>
     body { font-family: sans-serif; text-align: center; margin: 0; }
     input { width: 60%; padding: 10px; font-size: 16px; }
     button { padding: 10px 20px; font-size: 16px; margin-left: 5px; }
-    iframe { width: 100%; height: 90vh; border: none; margin-top: 10px; }
   </style>
 </head>
 <body>
@@ -15,29 +14,37 @@
   <input id="urlInput" type="text" placeholder="Enter a URL">
   <button onclick="go()">Go</button>
 
-  <div id="frameContainer"></div>
+  <footer style="margin-top:20px; font-size:14px; color:#666;">
+    <p>
+      made by o ig, visit main: 
+      <a href="https://bothwellstuff.github.io/bothwlllll/" target="_blank">CLICK ME</a>
+    </p>
+  </footer>
 
   <script>
     const proxy = "https://cloudprox.ntsmail99.workers.dev/?url="; 
-    // 👆 replace with your real Cloudflare Worker URL
+    // replace with your actual Worker URL
 
     function go() {
-      const target = document.getElementById("urlInput").value;
+      let target = document.getElementById("urlInput").value.trim();
       if (!target) return alert("Enter a URL first!");
 
-      const frame = document.createElement("iframe");
-      frame.src = proxy + encodeURIComponent(target);
+      // Add https:// if missing
+      if (!/^https?:\/\//i.test(target)) {
+        target = "https://" + target;
+      }
 
-      const container = document.getElementById("frameContainer");
-      container.innerHTML = ""; // clear old iframe
-      container.appendChild(frame);
+      fetch(proxy + encodeURIComponent(target))
+        .then(res => res.text())
+        .then(html => {
+          document.open();
+          document.write(html);
+          document.close();
+        })
+        .catch(err => {
+          alert("Error: " + err);
+        });
     }
   </script>
-<footer style="margin-top:20px; font-size:14px; color:#666;">
-  <p>
-    made by o ig, visit main: 
-    <a href="https://bothwellstuff.github.io/bothwlllll/" target="_blank">CLICK ME</a>
-  </p>
-</footer>
 </body>
 </html>
