--- a/index.html
+++ b/index.html
@@ -3,37 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Proxy Frontend</title>
+<title>proxy frontend v2</title>
 <style>
-body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 20px; }
-input { width: 70%; padding: 10px; }
-button { padding: 10px; }
-footer { margin-top: 50px; font-size: 0.9em; }
+  body, html { margin:0; padding:0; height:100%; font-family:sans-serif; }
+  header { padding: 10px; background: #3498db; color: white; display:flex; align-items:center; justify-content:space-between; }
+  input[type="text"] { flex:1; padding:8px; font-size:16px; border-radius:4px; border:none; }
+  button { padding:8px 12px; font-size:16px;  :none; border-radius:4px; background:#2c80c2; color:white; cursor:pointer; }
+  button:hover { background:#1f5f91; }
+  iframe { width:100%; height:calc(100% - 50px); border:none; }
 </style>
 </head>
 <body>
-<h1>Web Proxy</h1>
-<form id="proxyForm">
-  <input type="text" id="urlInput" placeholder="https://example.com">
-  <button type="submit">Go</button>
-</form>
-
-<footer>
-  Made by Owen, visit main: 
-  <a href="https://bothwellstuff.github.io/bothwlllll/" target="_blank">CLICK ME</a>
-</footer>
+<header>
+  <input type="text" id="urlInput" placeholder="https://example.com" autocomplete="off">
+  <button onclick="loadUrl()">Go</button>
+</header>
+<iframe id="proxyFrame"></iframe>
 
 <script>
-const workerURL = 'https://cloudprox.ntsmail99.workers.dev/'; // <- replace with your Worker URL
+const workerDomain = 'https://cloudprox.ntsmail99.workers.dev/'; // Replace with your Cloudflare Worker URL
 
-document.getElementById('proxyForm').addEventListener('submit', e => {
-  e.preventDefault();
-  let url = document.getElementById('urlInput').value.trim();
-  if (!url.startsWith('http')) url = 'https://' + url;
+// Load URL from query string if present
+const params = new URLSearchParams(window.location.search);
+const urlFromQuery = params.get('url');
+if (urlFromQuery) {
+  document.getElementById('urlInput').value = urlFromQuery;
+  loadUrl(urlFromQuery);
+}
 
-  // Redirect to Worker with ?url=
-  window.location.href = `${workerURL}?url=${encodeURIComponent(url)}`;
-});
+function loadUrl(forcedUrl) {
+  const input = forcedUrl || document.getElementById('urlInput').value.trim();
+  if (!input) return;
+
+  let targetUrl = input;
+  if (!/^https?:\/\//i.test(input)) {
+    targetUrl = 'https://' + input; // Default to https
+  }
+
+  const iframe = document.getElementById('proxyFrame');
+  iframe.src = `${workerDomain}/?url=${encodeURIComponent(targetUrl)}`;
+
+  // Update the URL in the browser without reloading the page
+  const newUrl = new URL(window.location.href);
+  newUrl.searchParams.set('url', targetUrl);
+  window.history.replaceState({}, '', newUrl);
+}
+
+// Auto-focus input
+document.getElementById('urlInput').focus();
 </script>
 </body>
 </html>
